Completes get route for basic info
- openapi.yaml: adds GET basicInfo api route information
- app.js: adds getBasicStudentInfo route
- student.js: adds getBasicStudentInfo to get page, limit, order, and filter from the client. Then return response back from student_db
- student_db.js: adds logic for handling order and filter. Also includes pagination.
